--- a/assets/scss/components/_brand.scss
+++ b/assets/scss/components/_brand.scss
@@ -3,7 +3,13 @@
 /*
 ************
 *************************
-04. Section Title
+23. brand
 ******************************************************* 
 *************************************************************** */
+.philip-brand-icon:hover {
+        svg path {
+            fill: $primaryColor;
+            transition: .3s;
+          }
+ } 
 
