--- a/assets/scss/components/_testimonial.scss
+++ b/assets/scss/components/_testimonial.scss
@@ -25,6 +25,12 @@
     }
     
 }
+.philip-testimonial-box {
+    .philip-section-heading {
+        margin-bottom: 0;
+    }
+    
+}
 .philip-testimonial-user {
     p {
         font-size: 16px;
@@ -50,6 +56,9 @@
     width: 40px;
     height: 5px;
     border-radius: 0%;
+  }
+  .carousel-indicators {
+    margin-bottom: -1rem;
   }
 
 
