--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,6 +8,8 @@
 @forward './components/banner';
 @forward './components/portfolio';
 @forward './components/qualification';
+@forward './components/available';
+@forward './components/brand';
 @forward './components/blog';
 @forward './components/testimonial';
 @forward './components/counter';
