--- a/assets/scss/components/_banner.scss
+++ b/assets/scss/components/_banner.scss
@@ -20,18 +20,22 @@
 }
 
 
-  .philip-banner-content p {
-    font-size:  22px;
-    color: #737373;
-    font-weight: 400;
-    text-transform: capitalize;
-    margin: 0;
-  }
-  .philip-video-watch span {
-    display: block;
-  }
-  .philip-video-watch p {
-    margin: 0;
+  .philip-banner-content {
+    p {
+      font-size:  22px;
+      color: #737373;
+      font-weight: 400;
+      text-transform: capitalize;
+      margin-bottom: 5px;
+    }
+  } 
+  .philip-video-watch {
+    span {
+      display: block;
+    }
+    p {
+      margin: 0;
+    }
   }
   .philp-heading {
     font-size: 80px;
@@ -40,93 +44,99 @@
     text-transform: capitalize;
     font-weight: bold;
     margin: 0;
+    span {
+      color: #5F41FF;
+    }
 
   }
-  .philp-heading span {
-    color: #5F41FF;
-  }
-  .philip-button a {
-    background-color: #5F41FF;
-    color: #fff;
-    height: 60px;
-    width: 200px;
-    border: 1px solid #5F41FF;
-    font-family: $nunito;
-    text-decoration: none;
-    display: inline-block;
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #5F41FF;
-  }
-  .philip-button a:hover {
-    background-color: #fff;
-    color: #5F41FF;
-    border: 1px solid #5F41Ff;
-    transition: .5s;
-  }
+  .philip-button {
+    a {
+      background-color: #5F41FF;
+      color: #fff;
+      height: 60px;
+      width: 200px;
+      border: 1px solid #5F41FF;
+      font-family: $nunito;
+      text-decoration: none;
+      display: inline-block;
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 1px solid #5F41FF;
+    }
+    a:hover {
+      background-color: #fff;
+      color: #5F41FF;
+      border: 1px solid #5F41Ff;
+      transition: .5s;
+    }
+  } 
+
   .philip-button:hover svg path {
     fill: #5F41FF;
     transition: .5s;
   }
-  .video-button span {
-    border: 10px solid #4168FF12;
-    background: #f000;
-    height: 80px;
-    width: 80px;
-    display: inline-block;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    color: #5F41FF;
-  }
-  .philip-social-list li {
-    list-style: none;
+  .video-button {
+    span {
+      border: 10px solid #4168FF12;
+      background: #f000;
+      height: 80px;
+      width: 80px;
+      display: inline-block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      color: #5F41FF;
+    }
+  } 
+  .philip-social-list {
+    li {
+      list-style: none;
+    }
   }
 
-  .philip-video-anmation .anim:nth-child(1) {
+.philip-video-anmation {
+  .anim:nth-child(1) {
     -webkit-animation: myAnim 2s infinite;
     animation: myAnim 2s infinite;
 }
-.philip-video-anmation .anim:nth-child(2) {
+.anim:nth-child(2) {
   -webkit-animation: myAnim 2s infinite .3s;
   animation: myAnim 2s infinite .3s;
 }
-.philip-video-anmation .anim:nth-child(3) {
+.anim:nth-child(3) {
   -webkit-animation: myAnim 2s infinite .6s;
   animation: myAnim 2s infinite .6s;
 }
+} 
+
 .philip-video-anmation {
   position: relative;
   width: 69px;
+  .anim {
+    text-decoration: none;
+    background-color: #fff;
+    font-family: montserrat;
+    color: #5F41FF;
+    position: absolute;
+    font-size: 17px;
+    text-align: center;
+    z-index: 3;
+    border-radius: 100%;
+    height: 60px;
+    width: 60px;
+    line-height: 55px;
+    display: inline-block;
+    left: 0;
+    bottom: 0;
+    font-weight: 600;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
+    border: 4px solid #5F41FF42;
+  }
 }
-.philip-video-anmation .anim {
-	text-decoration: none;
-	background-color: #fff;
-	font-family: montserrat;
-	color: #5F41FF;
-	position: absolute;
-	font-size: 17px;
-	text-align: center;
-	z-index: 3;
-	border-radius: 100%;
-	height: 60px;
-	width: 60px;
-	line-height: 55px;
-	display: inline-block;
-	left: 0;
-	bottom: 0;
-	font-weight: 600;
-	-webkit-transition: all 0.2s;
-	transition: all 0.2s;
-	border: 4px solid #5F41FF42;
-}
-
-
-
-
 
 @keyframes myAnim {
   0%{
@@ -153,68 +163,52 @@
 }
 
 
-  .philip-video-watch p {
-    font-size: 16px;
-    font-family: $nunito;
+  .philip-video-watch {
+    p {
+      font-size: 16px;
+      font-family: $nunito;
+    }
+  } 
+  .philip-video-watch {
+    span {
+      color: black;
+    }
+  } 
+  .philip-social {
+    p {
+      font-size: 16px;
+      color: black;
+      margin-bottom: 16px;
+    }
   }
-  .philip-video-watch span {
-    color: black;
+  .philip-social-list {
+    li:not(:last-child) {
+      margin-right: 20px;
+    }
+    li a {
+      color: #707070;
+      font-size: 15px;
+      display: inline-block;
+    }
+    li a:hover {
+      color: #5F41FF;
+      transition: .3s;
+    }
   }
-  .philip-social p {
-    font-size: 16px;
-    color: black;
-    margin-bottom: 16px;
-  }
-  .philip-social-list li:not(:last-child) {
-    margin-right: 20px;
-  }
-  .philip-social-list li a {
-    color: #707070;
-    font-size: 15px;
-    display: inline-block;
-  }
-  .philip-social-list li a:hover {
-    color: #5F41FF;
-    transition: .3s;
-  }
-  .philip-social p {
-    position: relative;
-  }
-  .philip-social p::after {
-    content: '';
-    display: block;
-    background: #707070;
-    height: 1px;
-    width: 54px;
-    left: 60px;
-    top: 13px;
-    position: absolute;
-  }
-  .philip-banner-image img {
-    max-width: 100%;
-  }
-  .philip-about-image {
-    text-align: right;
-    margin-right: 50px;
-    position: relative;
-  }
-  .philip-about-image img {
-    background: #EFEFEF;
-    padding: 56px 83px 0 83px;
-  }
-  .content-box {
-    background-color: #fff;
-    display: inline-block;
-    text-align: center;
-    color: #5F41FF;
-    padding: 20px;
-    border-radius: 16px;
-    box-shadow: -12px 12px 0px -2px;
-    position: absolute;
-    bottom: 91px;
-    left: -14px;
-  }
-  .content-box span {
-    font-size: 60px;
-    font-weight: bold;
-  }
+
+  .philip-social {
+    p {
+      position: relative;
+    }
+    p::after {
+      content: '';
+      display: block;
+      background: #707070;
+      height: 1px;
+      width: 54px;
+      left: 60px;
+      top: 13px;
+      position: absolute;
+    }
+  } 
+
