--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -27,10 +27,6 @@
 .philip-bg-gray {
   background-color: #F6F6F6;
 }
-.philip-padding-120 {
-  padding: 120px 0;
-}
-
 /*
 ************
 *************************
@@ -100,24 +96,29 @@
   border-right: 1px solid #dfe1e1;
 }
 
-.philip_main_menu li {
-  display: inline-block;
-  list-style: none;
-  position: relative;
-  z-index: 3;
+.philip_main_menu {
+  li {
+    display: inline-block;
+    list-style: none;
+    position: relative;
+    z-index: 3;
+  }
+  li a {
+    display: block;
+    padding: 50px 0px;
+    font-size: 16px;
+    text-decoration: none;
+    font-weight: 400;
+    font-family: $dmSans;
+    color: #1a1a1a;
+  }
+  
 }
-
-.philip_main_menu li a {
-  display: block;
-  padding: 50px 0px;
-  font-size: 16px;
-  text-decoration: none;
-  font-weight: 400;
-  font-family: $dmSans;
-  color: #1a1a1a;
-}
-.philip_main_menu li ul.sub-menu li a {
-  padding: 0;
+.philip_main_menu li ul.sub-menu li {
+  a {
+    padding: 10px 0;
+    margin: 0 30px;
+  }
 }
 .philip_main_menu li ul.sub-menu {
   position: absolute;
@@ -126,38 +127,18 @@
   width: 250px;
   background-color: #fff;
   -webkit-box-shadow: 0px 13px 29px rgba(0, 0, 0, 0.05);
-          box-shadow: 0px 13px 29px rgba(0, 0, 0, 0.05);
-  padding: 26px 30px;
-  border-top: 5px solid #5F41FF;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-.sub-menu-three {
-  background: #fff;
-  position: absolute;
-  left: 224px;
-  top: 0;
-  width: 250px;
   box-shadow: 0px 13px 29px rgba(0, 0, 0, 0.05);
-  padding: 26px 30px;
   border-top: 5px solid #5F41FF;
   opacity: 0;
   visibility: hidden;
   -webkit-transition: 0.3s;
   transition: 0.3s;
-}
-
-.sub-menu li:hover ul.sub-menu-three {
-  opacity: 1;
-  visibility: visible;
+  padding: 10px 0;
 }
 
 .philip_main_menu li ul.sub-menu li {
   display: block;
   margin: 0;
-  margin-bottom: 24px;
 }
 
 
@@ -166,51 +147,78 @@
   text-align: start;
 }
 
-.philip_main_menu li ul.sub-menu li a:before {
-  position: absolute;
-  left: 25px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 10px;
-  height: 2px;
-  content: "";
-  background-color: #5F41FF;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  opacity: 0;
-  visibility: hidden;
+.philip_main_menu li ul.sub-menu li {
+  a {
+    &:before {
+      position: absolute;
+      left: -5px;
+      top: 50%;
+      width: 7px;
+      height: 7px;
+      content: "";
+      background-color: #5F41FF;
+      border-radius: 50%;
+      display: inline-block;
+      transform: translateY(-50%);
+      transition: 0.3s;
+      opacity: 0;
+      visibility: hidden;
+    }
+    &:hover {
+      padding-left: 15px;
+      &::before {
+        left: 0;
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+  }
+  &:is(.has-menu-children) {
+    & > a {
+      &::after {
+        content: "\f107";
+        font-family: "Font Awesome 5 Pro";
+        font-weight: 500;
+        color: #1a1a1a;
+        display: inline-block;
+        float: right;      
+      }
+    }
+  }
 }
-
-.philip_main_menu li ul.sub-menu li a:hover {
-  padding-left: 15px;
-}
-.philip_main_menu li.has-menu-children {
-  margin-right: 43px;
-}
-.philip_main_menu li.has-menu-children::before {
-  position: absolute;
-right: -18px;
-top: 50%;
-transform: translateY(-50%);
-content: "\f107";
-font-family: "Font Awesome 5 Pro";
-font-weight: 500;
-color: #1a1a1a;
-}
-.philip_main_menu li.has-menu-children:hover::before {
-  color: #5F41FF;
+.philip_main_menu li.has-menu-children > a {
+  position: relative;
+  &::after {
+    content: "\f107";
+    font-family: "Font Awesome 5 Pro";
+    font-weight: 500;
+    color: #1a1a1a;
+    display: inline-block;
+    margin-left: 5px;
+  }
+  &:hover {
+    &::after {
+      color: #5F41FF;
+    }
+  }
 }
 .philip_main_menu li:hover > a,.has-menu-children {
   color: #5F41FF;
 }
-.philip_main_menu li:hover ul.sub-menu {
+.philip_main_menu li:hover > ul.sub-menu {
   opacity: 1;
   visibility: visible;
   top: 100%;
+  
+}
+.philip_main_menu li:hover > ul.sub-menu li > ul.sub-menu {
+  left: 100%;
+  right: 0;
+  top: 0;
 }
 .philip_main_menu li {
   margin: 0 21.5px;
+  z-index: 999;
 }
 .philip_quick_contact-nav {
   margin-left: 40px;
