--- a/assets/scss/components/_service.scss
+++ b/assets/scss/components/_service.scss
@@ -8,23 +8,22 @@
 ******************************************************* 
 *************************************************************** */
 
-
-
-
 .philip-service {
     padding: 72px 72px 67px 72px;
     text-align: center;
+    .philip-service span {
+      font-size: 60px;
+      color: #161616;
+      font-weight: 400;
+    }
   }
-  .philip-service span {
-    font-size: 60px;
-    color: #161616;
-    font-weight: 400;
-  }
+ 
  .philip-service-item span {
     color: #5F41FF;
     transition: .3s;
   }
-  .philip-service:hover .philip-service-content h3 {
+ .philip-service-content 
+  h3:hover {
     color: #5F41FF;
     transition: .3s;
   }
@@ -48,26 +47,31 @@
   .box-border:nth-last-child(-n+2) {
     border-top: 0px;
   }
-  .philip-service-item span path {
-    fill: #5F41FF;
-    transition: 0.3s;
+  .philip-service-item {
+    span path {
+      fill: #5F41FF;
+      transition: 0.3s;
+    }
+  } 
+  .philip-service {
+    h3 {
+      font-size: 24px;
+      color: #161616;
+      font-weight: 400;
+      margin-bottom: 30px;
+    }
+  } 
+  .philip-service-content {
+    p {
+      color: #737373;
+      font-size: 16px;
+      font-weight: 400;
+      margin-bottom: 0;
+    }
+    li:nth-child(1) {
+      margin-right: 20px;
+    }
+    li span {
+      font-size: 30px;
+    }  
   }
-  .philip-service h3 {
-    font-size: 24px;
-    color: #161616;
-    font-weight: 400;
-    margin-top: 43px;
-  }
-  .philip-service-content p {
-    color: #737373;
-    font-size: 16px;
-    font-weight: 400;
-    margin-bottom: 0;
-  }
-.hoverinner-content li:nth-child(1) {
-  margin-right: 20px;
-}
-.hoverinner-content li span {
-  font-size: 30px;
-}
-  
