--- a/assets/scss/components/_sidebar.scss
+++ b/assets/scss/components/_sidebar.scss
@@ -62,7 +62,11 @@ $background-color_1: #FFB013;
 	a {
 		display: block;
 		font-size: 16px;
-		margin-bottom: 5px;
+		margin-bottom: 10px;
+	}
+	a:hover {
+		color: #5F41FF;
+		transition: .3s;
 	}
 	i {
 		margin-right: 10px;
@@ -71,8 +75,9 @@ $background-color_1: #FFB013;
 }
 .edu-four-btn {
 	display: inline-block;
-	height: 50px;
-	line-height: 50px;
+	height: 60px;
+	width: 200px;
+	line-height: 56px;
 	text-align: center;
 	font-size: 16px;
 	font-weight: 600;
@@ -89,7 +94,10 @@ $background-color_1: #FFB013;
 	transition: all 0.3s ease-out 0s;
 	border: 1px solid transparent;
     &:hover {
-        color: #fff;
+		color: #5F41FF;
+        background-color: #fff;
+		border: 1px solid #5F41FF;
+		
     }
 }
 
